# learning_openmp

./: .gitignore
pi/: make.sh  pi_omp.cpp  pi_omp_critical.cpp  pi_omp_false.cpp  pi_omp_interleaved.cpp  pi_omp_proper.cpp  pi_omp_reduction.cpp  pi_omp_slide.cpp  pi_serial.cpp
rhf/: CMakeLists.txt  make_fake_integrals.py  rhf_omp.cpp  rhf_serial.cpp
